--- a/client/pages/studies/Study.html
+++ b/client/pages/studies/Study.html
@@ -13,4 +13,7 @@
 
   <h4>Files</h4>
   <div>{{json study.datafile}}</div>
+  <div>
+    <!-- <a href="{{study.datafiles.link}}">{{study.datafile.original.name}}</a> -->
+  </div>
 </template>
