--- a/client/pages/studies/Study.html
+++ b/client/pages/studies/Study.html
@@ -13,9 +13,14 @@
 
   <h4>Eye Tracking Data Files</h4>
   <ul>
-    {{#each datafile in datafiles}}
-      <li><a href="{{fileURL datafile}}?download=true" target="_top">{{datafile.name}}</a></li>
-      <!-- <ul><li>{{datafile.content}}</li></ul> -->
+    {{#each datafile in study.datafiles}}
+      <li>
+        <a href="{{fileURL datafile}}?download=true" target="_top">{{datafile.name}}</a>
+        {{#if datafile.processed}}<span class="label label-success">Processed</span>{{/if}}
+      </li>
+      {{#if datafile.processed}}
+        <!-- <ul><li>{{datafile.content}}</li></ul> -->
+      {{/if}}
     {{/each}}
   </ul>
 </template>
