--- a/client/pages/Home.html
+++ b/client/pages/Home.html
@@ -2,6 +2,7 @@
   <h3>Home page</h3>
   <ul>
     <li><a href="/generics">Generics</a></li>
+    <li><a href="/aois">AOIs</a></li>
     <li><a href="/studies">Studies</a></li>
   </ul>
 </template>
