--- a/client/pages/Home.html
+++ b/client/pages/Home.html
@@ -3,6 +3,7 @@
   <ul>
     <li><a href="/generics">Generics</a></li>
     <li><a href="/aois">AOIs</a></li>
+    <li><a href="/recordings">Recordings</a></li>
     <li><a href="/studies">Studies</a></li>
   </ul>
 </template>
