--- a/client/pages/aois/Aois.html
+++ b/client/pages/aois/Aois.html
@@ -11,7 +11,7 @@
   </h3>
   <ul>
     {{#each aois}}
-      <li><a href="/aois/{{_id}}">{{name}}</a></li>
+      <li><a href="/studies/{{study._id}}/aois/{{_id}}">{{name}}</a></li>
     {{/each}}
   </ul>
 </template>
