--- a/client/pages/recordings/Recordings.html
+++ b/client/pages/recordings/Recordings.html
@@ -11,7 +11,7 @@
   </h3>
   <ul>
     {{#each recordings}}
-      <li><a href="/recordings/{{_id}}">{{name}}</a></li>
+      <li><a href="/studies/{{study._id}}/recordings/{{_id}}">{{name}}</a></li>
     {{/each}}
   </ul>
 </template>
