--- a/client/pages/studies/Study.html
+++ b/client/pages/studies/Study.html
@@ -44,7 +44,7 @@
   <ul>
     {{#each aoi in aois}}
       <li>
-        <a href="/aois/{{aoi._id}}">{{aoi.name}}</a>
+        <a href="/studies/{{study._id}}/aois/{{aoi._id}}">{{aoi.name}}</a>
       </li>
     {{/each}}
   </ul>
