--- a/client/pages/recordings/Recording.html
+++ b/client/pages/recordings/Recording.html
@@ -10,4 +10,9 @@
     {{/if}}
   </h3>
   <div>{{json recording}}</div>
+
+  <h4>Data File</h4>
+  <div>
+    {{recording.datafile._id}}
+  </div>
 </template>
