--- a/client/pages/recordings/Recordings.html
+++ b/client/pages/recordings/Recordings.html
@@ -1,7 +1,7 @@
 <template name="Recordings">
-  <h3>Recordings <a href="#" class="btn btn-primary pull-right m-b-10"><i class="fa fa-search"></i> Advanced Search</a></h3>
+  <h3>Recordings <a href="#" class="btn btn-primary pull-right m-b-10"><i class="fa fa-search m-r-5"></i>Advanced Search</a></h3>
   <!-- //TODO https://datatables.net/examples/api/regex.html -->
-  
+
   {{> tabular table=TabularTables.RecordingsByStudyId selector=selector class="table table-striped table-bordered"}}
 
 </template>
