--- a/client/pages/studies/Study.html
+++ b/client/pages/studies/Study.html
@@ -8,7 +8,7 @@
         &nbsp;<a href="#" class="update-study"><i class="fa fa-pencil"></i></a>
       {{/unless}}
     {{/if}}
-    <a href="/studies/{{study._id}}/recordings" class="btn btn-primary pull-right">View Recordings</a>
+    <a href="/studies/{{study._id}}/recordings" class="btn btn-primary pull-right"><i class="fa fa-list m-r-10"></i>View Recordings</a>
   </h3>
   <div>{{study.desc}}</div>
 
@@ -50,6 +50,15 @@
       </li>
     {{/each}}
   </ul>
-
-  <h4>Viewings</h4>
+  
+  <h4>Analyses
+    {{#if study.hasPermission 'createAnalyses'}}
+      {{#unless $.Session.get 'newAnalysis'}}
+        &nbsp;<a class="new-analysis"><i class="fa fa-plus"></i></a>
+      {{/unless}}
+    {{/if}}
+  </h4>
+  {{#if $.Session.get 'newAnalysis'}}
+    {{> NewAnalysis}}
+  {{/if}}
 </template>
