--- a/client/pages/studies/Study.html
+++ b/client/pages/studies/Study.html
@@ -35,7 +35,7 @@
 
           {{#if datafile.recordingsProcessed}}
             {{#if datafile.processed}}
-              ({{formatNumber datafile.recordingsProcessed}} recordings)
+              ({{formatNumber datafile.recordingsProcessed}} recordings) ({{millisecondsToHMSMS datafile.recordingTimeTotal}})
             {{else}}
               ({{formatNumber datafile.recordingsProcessed}} of {{formatNumber datafile.recordings}} recordings processed)
             {{/if}}
@@ -50,6 +50,7 @@
     {{#each aoi in aois}}
       <li>
         <a href="/studies/{{study._id}}/aois/{{aoi._id}}">{{aoi.name}}</a>
+        <!-- ({{millisecondsToHMSMS aoi.recordingTimeTotal}}) -->
       </li>
     {{/each}}
   </ul>
