--- a/client/pages/recordings/Recordings.html
+++ b/client/pages/recordings/Recordings.html
@@ -2,6 +2,6 @@
   <h3>Recordings <a href="#" class="btn btn-primary pull-right m-b-10"><i class="fa fa-search m-r-5"></i>Advanced Search</a></h3>
   <!-- //TODO https://datatables.net/examples/api/regex.html -->
 
-  {{> tabular table=TabularTables.RecordingsByStudyId selector=selector class="table table-striped table-bordered"}}
+  {{> tabular table=TabularTables.RecordingsByStudy selector=selector class="table table-striped table-bordered"}}
 
 </template>
