--- a/client/pages/viewings/Viewing.html
+++ b/client/pages/viewings/Viewing.html
@@ -18,9 +18,26 @@
         {{formatNumber viewing.analysis.period}}
       {{/if}}
     </div>
+    <div>
+      <strong>Duration: </strong>
+    </div>
   </p>
 
-  <h4>Recordings {{#if recordings.count}}({{recordings.count}}){{/if}}</h4>
+  <h4>Instantaneous Convex Hull Areas</h4>
+  <p>...</p>
 
+  <h4>Cummulative Convex Hull Areas</h4>
+  <p>...</p>
+
+  <h4>Instantaneous Scanpath Length</h4>
+  <p>...</p>
+
+  <h4>Cummulative Scanpath Length</h4>
+  <p>...</p>
+
+  <h4>Scanpath Velocity</h4>
+  <p>...</p>
+
+  <h4>Recordings {{#if recordings.count}}({{recordings.count}}){{/if}}</h4>
   {{> tabular table=TabularTables.RecordingsByViewing selector=selector class="table table-striped table-bordered"}}
 </template>
