--- a/client/pages/analyses/Aoi.html
+++ b/client/pages/analyses/Aoi.html
@@ -8,116 +8,130 @@
         <td><a href="/studies/{{study._id}}/analyses/{{analysis._id}}">{{analysis.name}}</a></td>
       </tr>
       <tr>
-        <th>Viewing Durations (HH:MM:SS.MS) [ms]</th>
+        <th>Viewing Durations (ms)</th>
+        <td>
+          {{#each duration in durations}}
+            {{formatNumber duration}}
+          {{/each}}
+        </td>
+      </tr>
+      <tr>
+        <th>Viewing Durations Distribution</th>
+        <td>
+          [histogram]
+        </td>
+      </tr>
+      <tr>
+        <th>Viewing Durations Descriptive Stats (HH:MM:SS.MS) [ms]</th>
         <td>
           <tr>
+            <th>Minimum</th>
             <td>
-              {{#each duration in durations}}
-                {{formatNumber duration}}
-              {{/each}}
-              </td>
-            </tr>
-            <tr>
-              <th>Minimum</th>
-              <td>
-                {{#if durationMin}}
-                  {{millisecondsToHMSMS durationMin}}
-                  [{{formatNumber durationMin}}]
-                {{/if}}
-              </td>
-            </tr>
-            <tr>
-              <th>Maximum</th>
-              <td>
-                {{#if durationMax}}
-                  {{millisecondsToHMSMS durationMax}}
-                  [{{formatNumber durationMax}}]
-                {{/if}}
-              </td>
-            </tr>
-            <tr>
-              <th>Range</th>
-              <td>
-                {{#if durationRange}}
-                  {{millisecondsToHMSMS durationRange}}
-                  [{{formatNumber durationRange}}]
-                {{/if}}
-              </td>
-            </tr>
-            <tr>
-              <th>Mean</th>
-              <td>
-                {{#if durationMean}}
-                  {{millisecondsToHMSMS durationMean}}
-                  [{{formatNumber durationMean}}]
-                {{/if}}
-              </td>
-            </tr>
-            <tr>
-              <th>Median</th>
-              <td>
-                {{#if durationMedian}}
-                  {{millisecondsToHMSMS durationMedian}}
-                  [{{formatNumber durationMedian}}]
-                {{/if}}
-              </td>
-            </tr>
+              {{#if durationMin}}
+                {{millisecondsToHMSMS durationMin}}
+                [{{formatNumber durationMin}}]
+              {{/if}}
+            </td>
+          </tr>
+          <tr>
+            <th>Maximum</th>
+            <td>
+              {{#if durationMax}}
+                {{millisecondsToHMSMS durationMax}}
+                [{{formatNumber durationMax}}]
+              {{/if}}
+            </td>
+          </tr>
+          <tr>
+            <th>Range</th>
+            <td>
+              {{#if durationRange}}
+                {{millisecondsToHMSMS durationRange}}
+                [{{formatNumber durationRange}}]
+              {{/if}}
+            </td>
+          </tr>
+          <tr>
+            <th>Mean</th>
+            <td>
+              {{#if durationMean}}
+                {{millisecondsToHMSMS durationMean}}
+                [{{formatNumber durationMean}}]
+              {{/if}}
+            </td>
+          </tr>
+          <tr>
+            <th>Median</th>
+            <td>
+              {{#if durationMedian}}
+                {{millisecondsToHMSMS durationMedian}}
+                [{{formatNumber durationMedian}}]
+              {{/if}}
+            </td>
+          </tr>
         </td>
       </tr>
 
       <tr>
         <th># of Viewings per Datafile</th>
         <td>
-          <tr>
-            <td>
-              {{#each count in viewingCounts}}
-                {{formatNumber count}}
-              {{/each}}
-              </td>
-            </tr>
-            <tr>
-              <th>Minimum</th>
-              <td>
-                {{#if durationMin}}
-                  {{formatNumber durationMin}}
-                {{/if}}
-              </td>
-            </tr>
-            <tr>
-              <th>Maximum</th>
-              <td>
-                {{#if durationMax}}
-                  {{formatNumber durationMax}}
-                {{/if}}
-              </td>
-            </tr>
-            <tr>
-              <th>Range</th>
-              <td>
-                {{#if durationRange}}
-                  {{millisecondsToHMSMS durationRange}}
-                  [{{formatNumber durationRange}}]
-                {{/if}}
-              </td>
-            </tr>
-            <tr>
-              <th>Mean</th>
-              <td>
-                {{#if durationMean}}
-                  {{formatNumber durationMean}}
-                {{/if}}
-              </td>
-            </tr>
-            <tr>
-              <th>Median</th>
-              <td>
-                {{#if durationMedian}}
-                  {{formatNumber durationMedian}}
-                {{/if}}
-              </td>
-            </tr>
+          {{#each count in viewingCounts}}
+            {{formatNumber count}}
+          {{/each}}
         </td>
       </tr>
+      <tr>
+        <th># of Viewings per Datafile Distribution</th>
+        <td>
+          [histogram]
+        </td>
+      </tr>
+      <tr>
+        <th># of Viewings per Datafile Descriptive Stats</th>
+        <td>
+          <tr>
+            <th>Minimum</th>
+            <td>
+              {{#if viewingCountsMin}}
+                {{formatNumber viewingCountsMin}}
+              {{/if}}
+            </td>
+          </tr>
+          <tr>
+            <th>Maximum</th>
+            <td>
+              {{#if viewingCountsMax}}
+                {{formatNumber viewingCountsMax}}
+              {{/if}}
+            </td>
+          </tr>
+          <tr>
+            <th>Range</th>
+            <td>
+              {{#if viewingCountsRange}}
+                {{formatNumber viewingCountsRange}}
+              {{/if}}
+            </td>
+          </tr>
+          <tr>
+            <th>Mean</th>
+            <td>
+              {{#if viewingCountsMean}}
+                {{formatNumber viewingCountsMean}}
+              {{/if}}
+            </td>
+          </tr>
+          <tr>
+            <th>Median</th>
+            <td>
+              {{#if viewingCountsMedian}}
+                {{formatNumber viewingCountsMedian}}
+              {{/if}}
+            </td>
+          </tr>
+        </td>
+      </tr>
+
     </tbody>
   </table>
 
