--- a/client/pages/analyses/Aoi.html
+++ b/client/pages/analyses/Aoi.html
@@ -1,5 +1,5 @@
 <template name="AnalysisAoi">
-  <h3>{{aoi.name}}</h3>
+  <h3 class="m-t-0">{{aoi.name}}</h3>
 
   <table class="table table-striped table-bordered no-footer">
     <tbody>
