--- a/client/pages/aois/Aois.html
+++ b/client/pages/aois/Aois.html
@@ -1,5 +1,5 @@
 <template name="Aois">
-  <h3>Aois
+  <h3 class="m-t-0">Aois
     {{#if isInRole 'create' 'aois'}}
       {{#unless $.Session.get 'newAoi'}}
         &nbsp;<a class="new-aoi"><i class="fa fa-plus"></i></a>
@@ -9,7 +9,7 @@
   {{#if $.Session.get 'newAoi'}}
     {{> NewAoi}}
   {{/if}}
-  
+
   <ul>
     {{#each aois}}
       <li><a href="/studies/{{study._id}}/aois/{{_id}}">{{name}}</a></li>
