--- a/client/pages/viewings/Viewing.html
+++ b/client/pages/viewings/Viewing.html
@@ -2,7 +2,7 @@
   {{#if $.Session.get 'updateViewing'}}
     {{> UpdateViewing viewing=viewing}}
   {{/if}}
-  <h3>Viewing #{{viewing.number}}</h3>
+  <h3 class="m-t-0">Viewing #{{viewing.number}}</h3>
   <p>
     <div>
       <strong>Datafile:</strong>
