--- a/client/pages/viewings/Viewings.html
+++ b/client/pages/viewings/Viewings.html
@@ -1,5 +1,5 @@
 <template name="Viewings">
-  <h3>Viewings
+  <h3 class="m-t-0">Viewings
     {{#if isInRole 'create' 'viewings'}}
       {{#unless $.Session.get 'newViewing'}}
         &nbsp;<a class="new-viewing"><i class="fa fa-plus"></i></a>
