--- a/client/pages/Home.html
+++ b/client/pages/Home.html
@@ -1,5 +1,5 @@
 <template name="Home">
-  <h3>Home page</h3>
+  <h3 class="m-t-0">Home page</h3>
   <ul>
     <li><a href="/generics">Generics</a></li>
     <li><a href="/viewings">Viewings</a></li>
