--- a/client/pages/analyses/NewAnalysis.html
+++ b/client/pages/analyses/NewAnalysis.html
@@ -13,6 +13,7 @@
         {{> afQuickField name="viewingGap"}}
         {{> afQuickField name="minViewingTime"}}
         {{> afQuickField name="studyId"}}
+        {{> afQuickField name="datafileIds" options=datafileOptions}}
         {{> afQuickField name="aoiIds" options=aoiOptions}}
         <div class="form-group">
           <button type="submit" class="btn btn-primary">Submit</button>
