--- a/client/pages/generics/Generic.html
+++ b/client/pages/generics/Generic.html
@@ -2,7 +2,7 @@
   {{#if $.Session.get 'updateGeneric'}}
     {{> UpdateGeneric generic=generic}}
   {{/if}}
-  <h3>{{generic.name}}
+  <h3 class="m-t-0">{{generic.name}}
     {{#if generic.hasPermission 'update'}}
       {{#unless $.Session.get 'updateGeneric'}}
         &nbsp;<a href="#" class="update-generic"><i class="fa fa-pencil"></i></a>
