--- a/client/pages/studies/Studies.html
+++ b/client/pages/studies/Studies.html
@@ -1,5 +1,5 @@
 <template name="Studies">
-  <h3>Studies
+  <h3 class="m-t-0">Studies
     {{#if isInRole 'create' 'studies'}}
       {{#unless $.Session.get 'newStudy'}}
         &nbsp;<a class="new-study"><i class="fa fa-plus"></i></a>
@@ -9,7 +9,7 @@
   {{#if $.Session.get 'newStudy'}}
     {{> NewStudy}}
   {{/if}}
-  
+
   <ul>
     {{#each studies}}
       <li><a href="/studies/{{_id}}">{{name}}</a></li>
