--- a/client/pages/studies/Study.html
+++ b/client/pages/studies/Study.html
@@ -19,21 +19,38 @@
     <h4>Eye Tracking Data Files
       {{#if datafiles.count}}
         ({{datafiles.count}})
-        {{#if study.allDatafilesProcessed}}
+        {{#if study.datafilesProcessed}}
           <span class="label label-success">All Processed</span>
+        {{else}}
+          {{#if study.datafilesProcessing}}
+            <span class="label label-default">Datafiles Processing
+              <i class="fa fa-spinner fa-pulse fa-fw"></i>
+            </span>
+          {{/if}}
         {{/if}}
       {{/if}}
     </h4>
     <ul>
       {{#each datafile in datafiles}}
         <li>
-          {{#if datafile.preprocessing}}<span class="label label-default">Pre-processing</span>{{/if}}
-          {{#if datafile.processing}}<span class="label label-default">Processing</span>{{/if}}
-          {{#if datafile.processed}}<span class="label label-success">Processed</span>{{/if}}
+          {{#if datafile.preprocessing}}
+            <span class="label label-default">
+              Pre-processing
+              <i class="fa fa-spinner fa-pulse fa-fw"></i></span>
+          {{/if}}
+          {{#if datafile.processing}}
+            <span class="label label-default">
+              Processing
+              <i class="fa fa-spinner fa-pulse fa-fw"></i></span>
+          {{/if}}
+          {{#if datafile.processed}}
+            <span class="label label-success">Processed</span>
+          {{/if}}
 
           <a href="{{fileURL datafile}}?download=true" target="_top">{{datafile.name}}</a>
 
-          {{#if datafile.recordingsProcessed}}
+          <!-- omit status for faster datafile processing -->
+          <!-- {{#if datafile.recordingsProcessed}}
             {{#if datafile.processed}}
               ({{formatNumber datafile.recordingsProcessed}} recordings)
             {{else}}
@@ -43,6 +60,10 @@
             {{#if datafile.recordings}}
               (0 of {{formatNumber datafile.recordings}} recordings processed)
             {{/if}}
+          {{/if}} -->
+
+          {{#if datafile.recordings}}
+            ({{formatNumber datafile.recordings}} recordings)
           {{/if}}
         </li>
       {{/each}}
