--- a/client/pages/analyses/UpdateAnalysis.html
+++ b/client/pages/analyses/UpdateAnalysis.html
@@ -4,11 +4,24 @@
       <h3 class="panel-title">Edit Analysis <i class="fa fa-close pull-right"></i></h3>
     </div>
     <div class="panel-body">
-      {{> quickForm collection="Analyses" doc=analysis id="updateAnalysisForm"
-        type="update" class="update-analysis-form"}}
-
       <!-- {{> quickForm collection="Analyses" doc=analysis id="updateAnalysisForm"
-        type="method" meteormethod="analyses.update" class="update-analysis-form"}} -->
+        type="update" class="update-analysis-form"}} -->
+
+      {{#autoForm collection="Analyses" doc=analysis id="updateAnalysisForm" type="update"
+        class="update-analysis-form"}}
+        {{> afQuickField name="name"}}
+        {{> afQuickField name="desc"}}
+        {{> afQuickField name="analysisTypes"}}
+        {{> afQuickField name="period"}}
+        {{> afQuickField name="viewingGap"}}
+        {{> afQuickField name="minViewingTime"}}
+        {{> afQuickField name="studyId"}}
+        {{> afQuickField name="datafileIds" options=datafileOptions}}
+        {{> afQuickField name="aoiIds" options=aoiOptions}}
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      {{/autoForm}}
 
       {{#if analysis.hasPermission 'destroy'}}
         {{> quickRemoveButton collection="Analyses" _id=analysis._id
