--- a/client/pages/analyses/UpdateAnalysis.html
+++ b/client/pages/analyses/UpdateAnalysis.html
@@ -11,13 +11,13 @@
         class="update-analysis-form"}}
         {{> afQuickField name="name"}}
         {{> afQuickField name="desc"}}
-        {{> afQuickField name="analysisTypes"}}
-        {{> afQuickField name="period"}}
-        {{> afQuickField name="viewingGap"}}
-        {{> afQuickField name="minViewingTime"}}
-        {{> afQuickField name="studyId"}}
-        {{> afQuickField name="datafileIds" options=datafileOptions}}
-        {{> afQuickField name="aoiIds" options=aoiOptions}}
+        {{> afQuickField name="analysisTypes" type="hidden"}}
+        {{> afQuickField name="period" type="hidden"}}
+        {{> afQuickField name="viewingGap" type="hidden"}}
+        {{> afQuickField name="minViewingTime" type="hidden"}}
+        {{> afQuickField name="studyId" type="hidden"}}
+        {{> afQuickField name="datafileIds" options=datafileOptions type="hidden"}}
+        {{> afQuickField name="aoiIds" options=aoiOptions type="hidden"}}
         <div class="form-group">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
